--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@ console.log(me.getLastFeeling());
             <li>
                 <a class="flip" href="http://ishizuki.github.io/A/" target="_blank">
                     <div class="off">
-                        <i class="fa fa-book"></i>
-                        <span>AAAA</span>
+                        <i class="fa fa-code"></i>
+                        <span>Game</span>
                     </div>
                     <img class="on" src="img/mariogame.png" alt="Mario" />
                 </a>
