--- a/index.html
+++ b/index.html
@@ -226,54 +226,56 @@ console.log(me.getLastFeeling());
 
     <!--/ works start -->
     <div id="works" data-15500="right: 100%;" data-16600="right: 0;" data-17500="top: 0%;" data-19500="top: -150%;">
-        <h2>WORKS</h2>
+        <h2>WORKS
+        <a href="https://negishu.github.io/"><i class="fa fa-folder"></i>ALL</a>
+ 	</h2>
         <ul id="work_list" class="flips images cf">
             <li>
-                <a class="flip" href="http://ishizuki.github.io/A/" target="_blank">
+                <a class="flip" href="https://negishu.github.io/WinGame/" target="_blank">
                     <div class="off">
                         <i class="fa fa-code"></i>
-                        <span>Game</span>
+                        <span>WinGame</span>
                     </div>
                     <img class="on" src="img/mariogame.png" alt="Mario" />
                 </a>
             </li>
             <li>
-                <a class="flip" href="http://ishizuki.github.io/B/" target="_blank">
+                <a class="flip" href="https://negishu.github.io/WinDebugger/" target="_blank">
                     <div class="off">
                         <i class="fa fa-code"></i>
-                        <span>BBBB<br />bbbb</span>
+                        <span>WinDebugger</span>
                     </div>
                 </a>
             </li>
             <li>
-                <a class="flip" href="http://ishizuki.github.io/B/" target="_blank">
+                <a class="flip" href="https://negishu.github.io/NegiIME-AndroidStudio-/" target="_blank">
                     <div class="off">
                         <i class="fa fa-code"></i>
-                        <span>BBBB<br />bbbb</span>
+                        <span>NegiIME-AndroidStudio-</span>
                     </div>
                 </a>
             </li>
             <li>
-                <a class="flip" href="http://ishizuki.github.io/B/" target="_blank">
+                <a class="flip" href="https://negishu.github.io/2048/" target="_blank">
                     <div class="off">
                         <i class="fa fa-code"></i>
-                        <span>BBBB<br />bbbb</span>
+                        <span>2048</span>
                     </div>
                 </a>
             </li>
             <li>
-                <a class="flip" href="http://ishizuki.github.io/B/" target="_blank">
+                <a class="flip" href="https://negishu.github.io/Evanderoid/" target="_blank">
                     <div class="off">
                         <i class="fa fa-code"></i>
-                        <span>BBBB<br />bbbb</span>
+                        <span>Evanderoid</span>
                     </div>
                 </a>
             </li>
             <li>
-                <a class="flip" href="http://ishizuki.github.io/C/" target="_blank">
+                <a class="flip" href="https://negishu.github.io/DoubleArrayTrie/" target="_blank">
                     <div class="off">
                         <i class="fa fa-code"></i>
-                        <span>CCCC<br>cccc</span>
+                        <span>DoubleArrayTrie</span>
                     </div>
                 </a>
             </li>
@@ -306,7 +308,7 @@ console.log(me.getLastFeeling());
                 </a>
             </li>
             <li>
-                <a href="https://github.com/ishizuki" target="_blank">
+                <a href="https://github.com/negishu" target="_blank">
                     <img src="img/link_github.png" alt="github" />
                 </a>
             </li>
