--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@ console.log(me.getLastFeeling());
                         <i class="fa fa-code"></i>
                         <span>WinDebugger</span>
                     </div>
+                    <img class="on" src="img/WinDebugger.png" alt="WinDebugger" />
                 </a>
             </li>
             <li>
@@ -254,6 +255,7 @@ console.log(me.getLastFeeling());
                         <i class="fa fa-code"></i>
                         <span>NegiIME-AndroidStudio-</span>
                     </div>
+                    <img class="on" src="img/device-2016-12-23-233135.png" alt="NegiIME" />
                 </a>
             </li>
             <li>
@@ -262,6 +264,7 @@ console.log(me.getLastFeeling());
                         <i class="fa fa-code"></i>
                         <span>2048</span>
                     </div>
+                    <img class="on" src="img/device-2016-12-23-215916.png" alt="2048" />
                 </a>
             </li>
             <li>
@@ -270,6 +273,7 @@ console.log(me.getLastFeeling());
                         <i class="fa fa-code"></i>
                         <span>Evanderoid</span>
                     </div>
+                    <img class="on" src="img/device-2016-12-23-211343.png" alt="Evanderoid" />
                 </a>
             </li>
             <li>
