Updates & added for Mobile

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript">
         // smartphone
         if ((navigator.userAgent.indexOf('iPhone') > 0 && navigator.userAgent.indexOf('iPad') == -1) || navigator.userAgent.indexOf('iPod') > 0 || navigator.userAgent.indexOf('Android') > 0) {
-            location.href = './sp.html';
+            location.href = './mobile.html';
         }
     </script>
     <link rel="stylesheet" href="css/style.css">
@@ -127,25 +127,25 @@ console.log(me.getLastFeeling());
                         <br>
                         <br>
                         <br>
-                        Software Engineer@....<target="_blank">.... Inc.</a>
+                        Software Engineer@....<target ="_blank">.... Inc.</a>
                     </p>
                 </div>
                 <div class="text" data-8800="opacity:0;" data-9100="opacity:1;" data-10000="opacity:1;" data-10300="opacity:0;">
                     <h3>history</h3>
                     <p>
-                       <br />
-                       <br />
-                       <br />
-                       <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
                     </p>
                 </div>
                 <div class="text" data-10300="opacity:0;" data-10600="opacity:1;">
                     <h3>mind</h3>
                     <p>
-			I always like to think about how to make it more than what to make.
+                        I always like to think about how to make it more than what to make.
                         Programming is not just a means but a purpose. It is very fun to think about shaping in a clean design, clean code, efficient way than what you make.
-			I prefer to carefully and carefully implement the design carefully, rather than quickly making and fixing a lot of bugs later.
-			I also do design and direction, but writing the code is the most fun after all.
+                        I prefer to carefully and carefully implement the design carefully, rather than quickly making and fixing a lot of bugs later.
+                        I also do design and direction, but writing the code is the most fun after all.
                     </p>
                 </div>
                 <div class="marker_area">
@@ -224,12 +224,12 @@ console.log(me.getLastFeeling());
         </ul>
     </div>
     <!--/ skills_body -->
-
     <!--/ works start -->
     <div id="works" data-15500="right: 100%;" data-16600="right: 0;" data-17500="top: 0%;" data-19500="top: -150%;">
-        <h2>WORKS
-        <a href="https://negishu.github.io/"><i class="fa fa-folder"></i>ALL</a>
- 	</h2>
+        <h2>
+            WORKS
+            <a href="https://negishu.github.io/"><i class="fa fa-folder"></i>ALL</a>
+        </h2>
         <ul id="work_list" class="flips images cf">
             <li>
                 <a class="flip" href="https://negishu.github.io/WinGame/" target="_blank">
@@ -295,7 +295,6 @@ console.log(me.getLastFeeling());
 
     <div id="contact" data-18800="top:100%;" data-22000="top:0%;">
         <h2>CONTACT</h2>
-
         <ul id="links" class="cf">
             <li>
                 <a href="https://twitter.com/negis" target="_blank">
@@ -323,7 +322,6 @@ console.log(me.getLastFeeling());
                 </a>
             </li>
         </ul>
-
         <div id="copyright" data-21930="opacity:0;" data-22000="opacity:1;">2016 &copy; S.Ishizuki</div>
     </div>
     <div id="back"><a href="#home"></a></div>
