--- a/index.html
+++ b/index.html
@@ -120,23 +120,16 @@ console.log(me.getLastFeeling());
                 <div class="text" data-8500="opacity:1;z-index:10;" data-8800="opacity:0;z-index:0;">
                     <h3>S Ishizuki</h3>
                     <p>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        Software Engineer@....<target ="_blank">.... Inc.</a>
+                        Software Engineer @ ... <target ="_blank"> ... Inc.</a>
                     </p>
                 </div>
                 <div class="text" data-8800="opacity:0;" data-9100="opacity:1;" data-10000="opacity:1;" data-10300="opacity:0;">
                     <h3>history</h3>
                     <p>
-                        <br />
-                        <br />
-                        <br />
-                        <br />
+                        .<br />
+                        ..<br />
+                        ...<br />
+                        ....<br />
                     </p>
                 </div>
                 <div class="text" data-10300="opacity:0;" data-10600="opacity:1;">
@@ -158,11 +151,9 @@ console.log(me.getLastFeeling());
                 </div>
             </div>
         </div>
-
         <div id="skills"><h2>SKILLS</h2></div>
     </div>
     <!--/ about -->
-
     <div id="skills_body" data-9500="display: none;" data-10000="display:block;" data-16600="display: none;">
         <ul class="graphs" data-10000="left: -25%;" data-14000="left: 30%;">
             <li data-13000="margin-top: -100%;" data-14000="margin-top: 0%;" data-15000="margin-top: 0%;" data-16000="margin-top: -200%;">
@@ -287,12 +278,10 @@ console.log(me.getLastFeeling());
         </ul>
     </div>
     <!--/ works end -->
-
     <div id="bg2" data-15500="top:0%;" data-22000="top:-100%;"></div>
     <div class="white_text" data-17500="top:-20%;" data-22000="top:100%;">"Be the Worst."</div>
     <div>
     </div>
-
     <div id="contact" data-18800="top:100%;" data-22000="top:0%;">
         <h2>CONTACT</h2>
         <ul id="links" class="cf">
